--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
     "purescript-halogen": "^3.0.1",
-    "purescript-behaviors": "latest"
+    "purescript-behaviors": "^6.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
