--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
     "purescript-halogen": "^3.0.1",
-    "purescript-behaviors": "^6.0.0"
+    "purescript-behaviors": "^6.0.0",
+    "purescript-run": "latest"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
